index.css
/* ... */
.switch-label {
  transition: transform 300ms ease 0s;
  position: absolute;
  top: 0;
  font-weight: 600;
  color: #fff;
  z-index: 1;
  line-height: 26px;
  right: 10px;
}
.dark-theme .switch-label {
  left: 10px;
}

/* dark theme styles --------------- */
.dark-theme {
  color: #EEEEEE;
}

.dark-theme {
  background-color: #111111;
}

.dark-theme .arkime-logo {
  content: url('assets/Arkime_Logo_Mark_White@3x.png');
}

.dark-theme hr {
  border-top: 1px solid #666666;
}

.dark-theme .text-muted {
  color: #AAAAAA !important;
}

.dark-theme .bg-dark {
  background-color: var(--secondary-theme-color-dark) !important;
}

.dark-theme .arkime-brand {
  content: url('assets/Arkime_Logo_FullGradientWhite@3x.png');
}

.dark-theme .primary-theme-background {
  background-color: var(--primary-theme-text-color-dark);
}

.dark-theme .card,
.dark-theme .bg-white,
.dark-theme .jumbotron,
.dark-theme .jumbotron-white {
  background-color: #333333 !important;
}

.dark-theme .card-body {
  background-color: #3f3f3f;
}

.dark-theme input,
.dark-theme select,
.dark-theme textarea
.dark-theme .form-control:focus {
  border-color: #CED4DA;
  color: #FFFFFF !important;
  background-color: #000000 !important;
}
.dark-theme pre,
.dark-theme .input-group-text {
  color: #EEEEEE;
  background-color: #212121;
}

.dark-theme footer.footer {
  border-top: 1px solid #666666;
}
body.wiki-body.dark-theme footer.footer {
  background: var(--secondary-theme-color-dark);
}

.dark-theme .screenshot-img {
  box-shadow: none;
}
.dark-theme .screenshot-img.connections {
  content: url('assets/connections-dark.png');
}
.dark-theme .screenshot-img.sessions {
  content: url('assets/sessions-dark.png');
}
.dark-theme .screenshot-img.spigraph {
  content: url('assets/spigraph-dark.png');
}
.dark-theme .screenshot-img.spiview {
  content: url('assets/spiview-dark.png');
}

.dark-theme .screenshot-img.parliament-dashboard {
  content: url('assets/parliament-dark.png');
}
.dark-theme .screenshot-img.parliament-edit {
  content: url('assets/parliament-edit-dark.png');
}
.dark-theme .screenshot-img.parliament-issues {
  content: url('assets/parliament-issues-dark.png');
}
.dark-theme .screenshot-img.parliament-settings {
  content: url('assets/parliament-settings-dark.png');
}
.dark-theme .screenshot-img.parliament-users {
  content: url('assets/parliament-users-dark.png');
}

.dark-theme .screenshot-img.cont3xt {
  content: url('assets/cont3xt-dark.png');
}

.dark-theme .screenshot-img.ja4 {
  content: url('assets/ja4-dark.png');
}

.dark-theme .screenshot-img.multiviewer {
  content: url('assets/multiviewer-dark.png');
}

.dark-theme .screenshot-img.session-detail {
  content: url('assets/session-detail-dark.png');
}

.dark-theme .collapse-btn {
  background-color: #212121;
}
.dark-theme .collapse-btn:hover {
  background-color: #333333;
}

.dark-theme .list-group-item {
  background-color: #333333;
  border: 1px solid rgba(0,0,0,.5);
}
.dark-theme ul.list-group.list-group-striped > li.list-group-item:nth-of-type(even) {
  background-color: #1d1d1d;
}

.dark-theme .modal-content {
  color: #EEEEEE;
  background-color: #333333;
}
.dark-theme .close {
  color: #EEEEEE;
  opacity: 0.9;
}
.dark-theme .close:hover {
  color: #FFFFFF !important;
  opacity: 1;
}

.dark-theme .alert.alert-info {
  color: #d1ecf1;
  border-color: #03434e;
  background-color: #0c5460;
}
.dark-theme .alert.alert-secondary {
  color: #e2e3e5;
  border-color: #000000;
  background-color: #1d1d1d;
}
.dark-theme .alert.alert-danger {
  color: #e2e3e5;
  border-color: #570129;
  background-color: #680231;
}

/* loading animation */
.loading-downloads {
  height: 195px;
  transition: all 1s ease-out;
}
.loading-letter {
  opacity: 0;
  animation-name: fade;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  transition: font-size 1s ease-out;
}

.loading-letter:nth-child(2) {
  animation-delay: 0.05s;
}
.loading-letter:nth-child(3) {
  animation-delay: 0.1s;
}
.loading-letter:nth-child(4) {
  animation-delay: 0.15s;
}
.loading-letter:nth-child(5) {
  animation-delay: 0.2s;
}
.loading-letter:nth-child(6) {
  animation-delay: 0.25s;
}
.loading-letter:nth-child(7) {
  animation-delay: 0.3s;
}
.loading-letter:nth-child(8) {
  animation-delay: 0.35s;
}
.loading-letter:nth-child(9) {
  animation-delay: 0.4s;
}
.loading-letter:nth-child(10) {
  animation-delay: 0.45s;
}
.loading-letter:nth-child(11) {
  animation-delay: 0.5s;
}
.loading-letter:nth-child(12) {
  animation-delay: 0.55s;
}
.loading-letter:nth-child(13) {
  animation-delay: 0.6s;
}
.loading-letter:nth-child(14) {
  animation-delay: 0.65s;
}
.loading-letter:nth-child(15) {
  animation-delay: 0.7s;
}
.loading-letter:nth-child(16) {
  animation-delay: 0.75s;
}
.loading-letter:nth-child(17) {
  animation-delay: 0.8s;
}

@keyframes fade {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 1;
  }
  80%,
  100% {
    opacity: 0;
  }
}

/* arkime pronunciation on index page */
.arkime-pronunciation {
  cursor: pointer;
  font-size: 1.5rem;
  vertical-align: sub;
}

/* settings page styles ------------ */
h1.section-header {
  color: white;
  padding: 15px;
  margin-top: 50px;
  margin-left: -10px;
  margin-right: -10px;
  border-radius: 10px;
  box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.5);
  background-color: var(--primary-theme-color);
}
h2.subsection-header {
  color: white;
  padding: 6px;
  margin-top: 40px;
  border-radius: 10px;
  box-shadow: 0px 1px 2px -1px rgba(0,0,0,0.5);
  background-color: var(--primary-theme-light-color);
}
h3.subsection {
  padding-top: 5px;
  border-top: 2px solid var(--primary-theme-color);
}
.table-primary, .table-primary > td, .table-primary > th {
  background-color: #d5e7fbc9;
}
.dark-theme .table-primary, .dark-theme .table-primary > td, .dark-theme .table-primary > th {
  background-color: #05192e;
}
.dark-theme .table-striped tbody tr:nth-of-type(odd) {
  background-color: rgb(0 0 0 / 50%);
}
/* ... */

